--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@ function checkKey(e) {
     e = e || window.event;
     switch (e.keyCode) {
     case 32://space
+    	return 0;
+    case 39://right
     	return 1;
     case 37://left
     	return 2;
-    case 38://up
-    	return 3;
-    case 39://right
-    	return 4;
     case 40://down
+    	return 3;
+    case 38://up
+    	return 4;
+    case 27://esc
     	return 5;
     default:
-    	return 0;
+    	return false;
 	}
 }
 
@@ -27,7 +29,7 @@ var bytearray = new Uint8Array(1);
 
 function onkeydown(e) {
 	var x = checkKey(e);
-	if (x) {
+	if (x !== false) {
 		bytearray[0] = x;
 		socket.send(bytearray);
 	}
@@ -35,7 +37,7 @@ function onkeydown(e) {
 
 function onkeyup(e) {
 	var x = checkKey(e);
-	if (x) {
+	if (x !== false) {
 		bytearray[0] = x | 128;
 		socket.send(bytearray);
 	}
@@ -46,9 +48,6 @@ document.onkeyup = onkeyup;
 
 </script></head>
 <body>
-	<form action="c64.lua" method="post">
-		<input type="submit" value="Go!"/>
-	</form>
 	Use cursor keys!
 </body>
 </html>
