Add code for a touch controller. Should work on iOS/Android
This code is cribbed from http://github.com/greggman/hft-gamepad-api and
http://github.com/greggman/happyfuntimes

It doesn't seem to work in Edge at the moment.

--- a/test.html
+++ b/test.html
@@ -78,5 +78,5 @@ linear-gradient(
   %(dark)s
 )
     </script>
-<script src="/controller/controller-min.js"></script>
+<script data-main="/controller/scripts/main.js" src="controller/3rdparty/require.js"></script>
 </html>
