Fixed typo in js filename

--- a/index.html
+++ b/index.html
@@ -78,5 +78,5 @@ linear-gradient(
   %(dark)s
 )
     </script>
-<script src="/controller/controller-min.js"></script>
+<script src="/controller/controller.min.js"></script>
 </html>
